<resources>
    <string name="app_name">CricVee</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyMatchNote">Team 2 won by X runs/Y wickets</string>
    <string name="dummyName">Team Name</string>
    <string name="dummyScore">Total: 195/9(20.0)</string>
    <string name="dummyScoreHomeScreen">Total: 888/80</string>
    <string name="dummyOvers">Overs: 88</string>
    <string name="no_internet">No Internet</string>
    <string name="home">HOME</string>
    <string name="more">MORE</string>
    <string name="players">PLAYERS</string>
    <string name="player_search_hint">Enter player name</string>
    <string name="statistics">STATISTICS</string>
    <string name="rank">Rank</string>
    <string name="team">TEAM</string>
    <string name="ratings">Ratings</string>
    <string name="points">Points</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="odi">ODI</string>
    <string name="test">TEST</string>
    <string name="t20i">T20I</string>
    <string name="recent_matches">RECENT MATCHES</string>
    <string name="vs">VS</string>
    <string name="upcomingStr">Upcoming</string>
    <string name="missing">Not Available</string>
    <string name="Batting">Batting</string>
    <string name="Bowling">Bowling</string>
    <string name="_125_00">125.00</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_40">40</string>
    <string name="_50">50</string>
    <string name="position">POSITION</string>
    <string name="batting_style">BATTING STYLE</string>
    <string name="bowling_style">BOWLING STYLE</string>
    <string name="career_recent_season">CAREER (RECENT SEASON)</string>
    <string name="batting">BATTING</string>
    <string name="bowling">BOWLING</string>

</resources>