<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ICCWomenTeamRankingsFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/tab_border_shape"
            android:padding="@dimen/options_margin"
            android:text="@string/odi"
            android:textSize="@dimen/tab_text_size"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/teamString"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/type_text2"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/tab_border_shape"
            android:padding="@dimen/options_margin"
            android:text="@string/t20i"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/tab_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/type_text"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rankString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/rank"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/teamString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/columnMargin"
            android:text="@string/team"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/rankString"
            app:layout_constraintTop_toTopOf="@id/rankString"
            app:layout_constraintBottom_toBottomOf="@id/rankString"
            tools:text="@string/dummyName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ratingsString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_double"
            android:text="@string/ratings"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/pointsString"
            app:layout_constraintTop_toTopOf="@id/rankString"
            app:layout_constraintBottom_toBottomOf="@id/rankString"
            tools:text="@string/dummyName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pointsString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/points"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rankString"
            app:layout_constraintBottom_toBottomOf="@id/rankString" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_ranking_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamString"
            tools:listitem="@layout/rank_item" />

        <TextView
            android:id="@+id/space_txtv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottNavMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>